export distinct documents only to reduce size

--- a/email/index.html
+++ b/email/index.html
@@ -24,7 +24,7 @@
 <body>
   <span>
       <h2>#НАПлийкс - проверка на имейл</h2>
-      <p>В изтеклият на 15.07.2019г. файл - minfin_leak.zip се намира документ - <b>REG_DATA/TR17_EMAIL_ADDRESSES</b>, който съдържа <b>588078</b> записа с email адреси.</p>
+      <p>В изтеклият на 15.07.2019г. файл - minfin_leak.zip се намира документ - <b>REG_DATA/TR17_EMAIL_ADDRESSES</b>, който съдържа <b>588078</b> записа с email адреси, от които <b>352687</b> уникални адреса.</p>
       <p>В тази връзка е от значение, че този масив може да бъде използван за последващи фишинг атаки.</p><p>Повече за този тип атаки може да прочетете в <a href="https://bg.wikipedia.org/wiki/%D0%A4%D0%B8%D1%88%D0%B8%D0%BD%D0%B3">WIKIPEDIA</a></p>
       <p>В случай, че ваш имейл се намира в изтеклият масив, то бъдете особено внимателни, когато получавате имейли</p>
       <i>Вашата собствена бдителност е най-ефективният начин да сте в безопасност. Електронната поща може да бъде добре написана, да няма правописни грешки, цветовете на фирменото лого може да са легитимни, URL адресът и имейл адресът могат да изглеждат надеждни, но ако смятате, че все пак нещо не е наред, вярвайте на инстинктите си. Не отговаряйте на имейла. Вместо това,  обадете се директно на организацията-подател и проверете точността на получената от вас информация. След като разговаряте с тях и те потвърдят, че имейлът е измамен, маркирайте имейла, който сте получили като спам.</i>
@@ -32,7 +32,7 @@
       <p>Начинът по който е създадена страницата, извличането на данните от оригиналният масив, извличането на отделните имейл адреси, както и тази страница може да намерите <a href="https://github.com/nap-leaks/checks">тук</a></p>
       <hr>
       <p>При натискане на бутона "Провери", масив с hash стойности, извлечени от оригиналният масив, ще се свалят на вашият браузър, след което въведеният в полето имейл ще бъде проверен срещу изтегленият масив.</p>
-      <p>Масивът е с размер 40mb, така че бъдете търпеливи и изчакайте няколко секунди докато се изтегли.</p>
+      <p>Масивът е с размер 23 MB, така че бъдете търпеливи и изчакайте няколко секунди докато се изтегли.</p>
       <input type="email" id="email" placeholder="Въведи имейл">
       <input type="button" id="btnCheck" onclick="onCheckClick()" value="Провери">
       <br>
